--- a/static/reader.html
+++ b/static/reader.html
@@ -6,6 +6,7 @@
     <title>QriaDrama - 剧本阅读器</title>
     <link rel="stylesheet" href="css/reader.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/end-button.css">
 </head>
 <body>
     <div id="reader-container">
