--- a/static/reader.html
+++ b/static/reader.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QriaDrama - 剧本阅读器</title>
-    <link rel="stylesheet" href="css/reader.css">
-    <link rel="stylesheet" href="css/animations.css">
-    <link rel="stylesheet" href="css/end-button.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/reader.css" />
+    <link rel="stylesheet" href="css/animations.css" />
+    <link rel="stylesheet" href="css/end-button.css" />
+  </head>
+  <body>
     <div id="reader-container">
-        <div id="back-button">←</div>
-        <div id="dialogue-box">
-            <div id="character-name"></div>
-            <div id="dialogue-text"></div>
-        </div>
-        <div id="controls">
-            <div id="progress-indicator">1/1</div>
-        </div>
+      <div id="back-button">←</div>
+      <div id="dialogue-box">
+        <div id="character-name"></div>
+        <div id="dialogue-text"></div>
+      </div>
+      <div id="controls">
+        <div id="progress-indicator">1/1</div>
+      </div>
     </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/reader.js"></script>
-</body>
+  </body>
 </html>
