--- a/static/reader.html
+++ b/static/reader.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QriaDrama - 剧本阅读器</title>
+    <title>QriaDrama</title>
     <link rel="stylesheet" href="css/reader.css" />
     <link rel="stylesheet" href="css/animations.css" />
     <link rel="stylesheet" href="css/end-button.css" />
   </head>
   <body>
+    <!-- 阅读器主容器 -->
     <div id="reader-container">
+      <!-- 返回按钮 -->
       <div id="back-button">←</div>
+      <!-- 对话框容器 -->
       <div id="dialogue-box">
+        <!-- 角色名称显示区域 -->
         <div id="character-name"></div>
+        <!-- 对话文本显示区域 -->
         <div id="dialogue-text"></div>
       </div>
+      <!-- 控制区域 -->
       <div id="controls">
+        <!-- 进度指示器 -->
         <div id="progress-indicator">1/1</div>
       </div>
     </div>
